--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,10 @@ body {
     min-height: 100vh;
 }
 
+main {
+    background: #ffffff;
+}
+
 /* HEADER */
 header {
     background-color: #043463;
@@ -43,6 +47,12 @@ header {
     display: flex;
     gap: 10px;
     padding: 0 10px;
+}
+
+.section-options-left a {
+    color: white;
+    text-decoration: none;
+    font-size: 0.75rem;
 }
 
 .section-options-right p {
@@ -141,6 +151,162 @@ header span {
 
 .menu-search-button button:hover {
     background-color: #f0f0f0;
+}
+
+/* SEÇÕES */
+.container-section {
+    width: 100%;
+    height: 90vh;
+    background-color: #ffffff;
+
+    padding: 0 100px;
+}
+
+#section-conteudo {
+    padding: 100px;
+    display: flex;
+    background: #e9eef5;
+    
+}
+
+#content-images-infos {
+    width: 100%;
+}
+
+#content-images-conteudo {
+    width: 50%;
+
+    background-image: url('/images/phone_note.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#img-phone {
+    display: absolute;
+    left: 0;
+    top: 100;
+    width: 50%;
+}
+
+#section-conteudo h1 {
+    width: 40%;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #043463;
+}
+
+#section-conteudo p {
+    width: 40%;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+#section-conteudo button {
+    height: auto;
+    padding: 15px 30px;
+    border-radius: 50px;
+    margin-top: 20px;
+    background-color: #0d7cce;
+    color: #ffffff;
+    border: none;
+}
+
+#section-cursos {
+    width: 100%;
+}
+
+#section-cursos h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #043463;
+}
+
+.content-cursos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.container-curso {
+    width: 30%;
+    border-radius: 20px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    padding: 20px;
+}
+
+
+.container-curso img {
+    width: 100%;
+    height: 200px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.container-curso p {
+    font-size: 15px;
+    font-weight: 400;
+    padding: 0 10px;
+}
+
+.container-curso h2 {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0 10px;
+}
+
+#curso-infos {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 10px;
+    font-size: 0.8rem;
+}
+
+#curso-descricao {
+    display: flex;
+    flex-direction: column;
+}
+
+.container-curso button {
+    height: auto;
+    padding: 15px 30px;
+    border-radius: 50px;
+    margin-top: 20px;
+    background-color: #0d7cce;
+    color: #ffffff;
+    border: none;
+}
+
+#curso-img {
+    width: 100%;
+    height: 200px;
+    background-image: url('/images/curso1.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.container-button-all {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.content-button-all {
+    height: auto;
+    padding: 15px 30px;
+    border-radius: 50px;
+    margin-top: 20px;
+    background-color: #0d7cce;
+    color: #ffffff;
+    border: none;
 }
 
 /* MENU RESPONSIVO */
