--- a/styles/style.css
+++ b/styles/style.css
@@ -237,7 +237,7 @@ header span {
     border-radius: 20px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     background-color: white;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 
@@ -308,6 +308,102 @@ header span {
     color: #ffffff;
     border: none;
 }
+
+/* FORMAÇÕES */
+
+#section-formacoes {
+    /* display: flex; */
+}
+
+#section-formacoes h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #043463;
+}
+
+.content-formacoes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.container-formacao {
+    width: 40%;
+    border-radius: 20px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    /* padding: 20px; */
+    display: flex;
+    flex-direction: row;
+}
+
+.container-formacao img {
+    width: 200px;
+    height: 200px;
+    border-radius: 20px 0px 0px 20px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.container-formacao p {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0 10px;
+}
+
+.container-formacao h2 {
+    font-size: 0.7rem;
+    font-weight: 400;
+    padding: 0 10px;
+}
+
+#formacao-infos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 50px;
+    font-size: 0.8rem;
+    padding-left: 10px;
+    /* background: green; */
+}
+
+#formacao-descricao {
+    display: flex;
+    flex-direction: column;
+}
+
+.container-formacao button {
+    height: auto;
+    padding: 15px 30px;
+    border-radius: 50px;
+    margin-top: 20px;
+    background-color: #0d7cce;
+    color: #ffffff;
+    border: none;
+}
+
+#formacao-data {
+    display: flex;
+}
+
+#formacao-name {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    /* padding: 20px; */
+    /* justify-content: space-between; */
+}
+
+#formacao-img {
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 
 /* MENU RESPONSIVO */
 .menu-toggle {
